# todo_app

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2984e4079141_create_tasks_users_tables.py
app/: main.py
app/api/v1/: __init__.py  tasks.py  users.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: task.py  user.py
app/repositories/: user_repo.py
