[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
